refactor: migrate to stateless JWT authentication
- Switched from session-based (cookies) to stateless JWT tokens
- Added jjwt dependencies (0.12.5) to pom.xml
- Implemented JwtService for token generation and verification with roles
- Implemented JwtAuthenticationFilter to extract Bearer token from headers
- Updated SecurityConfig to use SessionCreationPolicy.STATELESS
- Updated all AuthControllers to return a JWT on successful login
- Updated frontend api.ts to store the token in localStorage and inject it into the Authorization header using fetchWithAuth
- Updated Login.tsx to save the token on successful login